<resources>
    <string name="app_name">MPSoDRC-mobile</string>
    <string name="setup">Setup</string>
    <string name="brightness">Brightness</string>
    <string name="speed">Speed</string>
    <string name="color_1">Color 1</string>
    <string name="color_2">Color 2</string>
    <string name="color_3">Color 3</string>
    <string name="color_4">Color 4</string>
    <string name="colors">Colors</string>
    <string name="description">Description</string>
</resources>
