<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/color_mode"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:isScrollContainer="true"
        android:visibility="gone"
>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"

            android:textStyle="bold"
            android:text="@string/colors"
    />

    <Spinner
            android:id="@+id/color_count_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
    />

    <LinearLayout
            android:id="@+id/one_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"

                android:textStyle="bold"
                android:text="@string/color_1"
        />
        <SeekBar
                android:id="@+id/color_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/two_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"

                android:textStyle="bold"
                android:text="@string/color_2"
        />
        <SeekBar
                android:id="@+id/color_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/three_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"

                android:textStyle="bold"
                android:text="@string/color_3"
        />
        <SeekBar
                android:id="@+id/color_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
        />
    </LinearLayout>
    <LinearLayout
            android:id="@+id/four_color"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp"

                android:textStyle="bold"
                android:text="@string/color_4"
        />
        <SeekBar
                android:id="@+id/color_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
        />
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"

            android:textStyle="bold"
            android:text="@string/brightness"
    />
    <SeekBar
            android:id="@+id/color_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
    />
</LinearLayout>